contact and reponsive

--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
                     <img src="./asset/icon/student.png" class="member-img" alt="member">
                     <p class="member-occuption">Student</p>
                     <p class="member-percents">55%</p>
-                    <div class="bar"><p class="member-bar-student"></p></div>
+                    <div class="bar">
+                        <p class="member-bar-student"></p>
+                    </div>
                     </p>
                 </div>
             </div>
@@ -93,7 +95,9 @@
                     <img src="./asset/icon/teacher.png" class="member-img" alt="member">
                     <p class="member-occuption">Teacher</p>
                     <p class="member-percents">5%</p>
-                    <div class="bar"><p class="member-bar-teacher"></p></div>
+                    <div class="bar">
+                        <p class="member-bar-teacher"></p>
+                    </div>
                     </p>
                 </div>
             </div>
@@ -102,7 +106,9 @@
                     <img src="./asset/icon/profs.png" class="member-img" alt="member">
                     <p class="member-occuption">Professional</p>
                     <p class="member-percents">40%</p>
-                    <div class="bar"><p class="member-bar-pros"></p></div>
+                    <div class="bar">
+                        <p class="member-bar-pros"></p>
+                    </div>
                     </p>
                 </div>
             </div>
@@ -111,7 +117,9 @@
                     <img src="./asset/icon/interns.png" class="member-img" alt="member">
                     <p class="member-occuption">Interns</p>
                     <p class="member-percents">60%</p>
-                    <div class="bar"><p class="member-bar-interns"></p></div>
+                    <div class="bar">
+                        <p class="member-bar-interns"></p>
+                    </div>
                     </p>
                 </div>
             </div>
@@ -130,6 +138,37 @@
             <img src="./asset/img/work_1.jpg" alt="">
         </div>
     </div>
+
+    <form class="contact">
+        <div class="contact-heading">
+            <h1>Contact</h1>
+        </div>
+        <div class="contact-content">
+            <label for="" class="lable" > Full Name</label>
+            <input type="text" class="form-control" placeholder="Enter your name">
+            <label for="" class="lable" >Enter your Email</label>
+            <input type="text" class="form-control" placeholder="Enter your email address">
+            <label for="" class="lable" >Enter your message</label>
+            <textarea class="text-area" placeholder="Enter your message" name="text area" id="" cols="30"
+                rows="8"></textarea>
+        </div>
+        <button class="btn-contact">SEND</button>
+    </form>
+
+    <footer class="footer">
+        <h1>THANK YOU</h1>
+        <div class="footer-content">
+            <div>
+                <img src="./asset/img/MY_LOGO.png" alt="logo" />
+            </div>
+            <div class="box2">
+                <h2>Follow Us</h2>
+                <img src="./asset/icon/fb.png" alt="fb">
+                <img src="./asset/icon/insta.png" alt="insta" />
+                <img class="twitter" src="./asset/icon/twit.png" alt="twitter">
+            </div>
+        </div>
+    </footer>
 
     <!-- <div class="section" id="section">
         <div class="section1-content">
