--- a/index.html
+++ b/index.html
@@ -75,55 +75,57 @@
     </div>
 
     <div class="member-section" id="members-">
-        <div class="members-heading">
-            <h1>Member</h1>
-        </div class="members">
-        <div>
-            <div class="members-content">
-                <div class="member-box">
-                    <img src="./asset/icon/student.png" class="member-img" alt="member">
-                    <p class="member-occuption">Student</p>
-                    <p class="member-percents">55%</p>
-                    <div class="bar">
-                        <p class="member-bar-student"></p>
+        <h1 class="members-heading">Member</h1>
+            <div class="members">
+                <div class="members-content">
+                    <div class="member-box">
+                        <img src="./asset/icon/student.png" class="member-img" alt="member">
+                        <p class="member-occuption">Student</p>
+                        <p class="member-percents">55%</p>
+                        <div class="bar">
+                            <p class="member-bar-student"></p>
+                        </div>
+                        </p>
                     </div>
-                    </p>
                 </div>
-            </div>
-            <div class="members-content">
-                <div class="member-box">
-                    <img src="./asset/icon/teacher.png" class="member-img" alt="member">
-                    <p class="member-occuption">Teacher</p>
-                    <p class="member-percents">5%</p>
-                    <div class="bar">
-                        <p class="member-bar-teacher"></p>
+                <div class="members-content">
+                    <div class="member-box">
+                        <img src="./asset/icon/teacher.png" class="member-img" alt="member">
+                        <p class="member-occuption">Teacher</p>
+                        <p class="member-percents">5%</p>
+                        <div class="bar">
+                            <p class="member-bar-teacher"></p>
+                        </div>
+                        </p>
                     </div>
-                    </p>
                 </div>
-            </div>
-            <div class="members-content">
-                <div class="member-box">
-                    <img src="./asset/icon/profs.png" class="member-img" alt="member">
-                    <p class="member-occuption">Professional</p>
-                    <p class="member-percents">40%</p>
-                    <div class="bar">
-                        <p class="member-bar-pros"></p>
+                <div class="members-content">
+                    <div class="member-box">
+                        <img src="./asset/icon/profs.png" class="member-img" alt="member">
+                        <p class="member-occuption">Professional</p>
+                        <p class="member-percents">40%</p>
+                        <div class="bar">
+                            <p class="member-bar-pros"></p>
+                        </div>
+                        </p>
                     </div>
-                    </p>
                 </div>
-            </div>
-            <div class="members-content">
-                <div class="member-box">
-                    <img src="./asset/icon/interns.png" class="member-img" alt="member">
-                    <p class="member-occuption">Interns</p>
-                    <p class="member-percents">60%</p>
-                    <div class="bar">
-                        <p class="member-bar-interns"></p>
+                <div class="members-content">
+                    <div class="member-box">
+                        <img src="./asset/icon/interns.png" class="member-img" alt="member">
+                        <p class="member-occuption">Interns</p>
+                        <p class="member-percents">60%</p>
+                        <div class="bar">
+                            <p class="member-bar-interns"></p>
+                        </div>
+                        </p>
                     </div>
-                    </p>
                 </div>
-            </div>
+            <!-- <div class="members-content-img">
+                <img src="./asset/img/work_6.jpg" alt="">
+            </div> -->
         </div>
+       
     </div>
 
     <div class="work-section" id="work">
@@ -151,14 +153,14 @@
             <label for="" class="lable" >Enter your message</label>
             <textarea class="text-area" placeholder="Enter your message" name="text area" id="" cols="30"
                 rows="8"></textarea>
+                <button class="btn-contact btn">SEND</button>
         </div>
-        <button class="btn-contact">SEND</button>
     </form>
 
     <footer class="footer">
         <h1>THANK YOU</h1>
         <div class="footer-content">
-            <div>
+            <div class="footerlogo">
                 <img src="./asset/img/MY_LOGO.png" alt="logo" />
             </div>
             <div class="box2">
